--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,73 @@
 body {
   margin: 0;
 }
+
+.header {
+  display: flex;
+  padding: 10px 50px;
+  align-items: center;
+  justify-content: space-between;
+}
+
+/* nav */
+.logo__link {
+  line-height: 0;
+}
+
+.logo {
+  width: 40px;
+  height: 40px;
+  margin: auto;
+}
+
+.nav__list {
+  display: flex;
+  padding: 0;
+  margin: 0;
+}
+
+.nav__item {
+  list-style: none;
+  margin: 0 10px;
+}
+
+.nav__item:first-child {
+  margin-left: 0;
+  padding-left: 0;
+}
+
+.nav__item:last-child {
+  margin-right: 0;
+}
+
+.nav__link {
+  color: black;
+  text-decoration: none;
+  font-size: 12px;
+  font-family: Roboto, sans-serif;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+.nav__link:hover {
+  color: #00acdc;
+  text-decoration: underline;
+  text-decoration-color: #00acdc;
+  text-decoration-thickness: 2px;
+}
+
+.is-active {
+  color: #00acdc;
+  position: relative;
+}
+
+.is-active::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  background-color: #00acdc;
+  left: 0;
+  bottom: -18.5px;
+  border-radius: 10px;
+}
