--- a/src/style.css
+++ b/src/style.css
@@ -1,39 +1,41 @@
+html {
+  --link-blue: #00acdc;
+}
+
 body {
   margin: 0;
+  font-family: Roboto, sans-serif;
+  font-weight: 500;
+  font-style: normal;
 }
 
 .header {
   display: flex;
-  padding: 10px 50px;
+  padding: 0 50px;
   align-items: center;
   justify-content: space-between;
-}
-
-/* nav */
-.logo__link {
-  line-height: 0;
 }
 
 .logo {
   width: 40px;
   height: 40px;
-  margin: auto;
+}
+
+.nav {
+  height: 100%;
 }
 
 .nav__list {
   display: flex;
+  list-style: none;
   padding: 0;
-  margin: 0;
 }
 
 .nav__item {
-  list-style: none;
-  margin: 0 10px;
-}
-
-.nav__item:first-child {
-  margin-left: 0;
-  padding-left: 0;
+  margin-right: 20px;
+  align-items: center;
+  text-transform: uppercase;
+  font-size: 12px;
 }
 
 .nav__item:last-child {
@@ -41,24 +43,20 @@ body {
 }
 
 .nav__link {
-  color: black;
+  color: #000;
   text-decoration: none;
   font-size: 12px;
-  font-family: Roboto, sans-serif;
-  font-weight: 500;
-  text-transform: uppercase;
+  position: relative;
+  margin-right: 20px;
+  height: 60px;
 }
 
 .nav__link:hover {
-  color: #00acdc;
-  text-decoration: underline;
-  text-decoration-color: #00acdc;
-  text-decoration-thickness: 2px;
+  color: var(--link-blue);
 }
 
 .is-active {
-  color: #00acdc;
-  position: relative;
+  color: var(--link-blue);
 }
 
 .is-active::after {
@@ -66,8 +64,9 @@ body {
   position: absolute;
   width: 100%;
   height: 4px;
-  background-color: #00acdc;
+  background-color: var(--link-blue);
   left: 0;
-  bottom: -18.5px;
-  border-radius: 10px;
+  right: 0;
+  bottom: 0;
+  border-radius: 8px;
 }
