--- a/src/style.css
+++ b/src/style.css
@@ -11,31 +11,36 @@ body {
 
 .header {
   display: flex;
-  padding: 0 50px;
+  padding: 10px 50px;
   align-items: center;
   justify-content: space-between;
+}
+
+/* nav */
+.logo__link {
+  line-height: 0;
 }
 
 .logo {
   width: 40px;
   height: 40px;
-}
-
-.nav {
-  height: 100%;
+  margin: auto;
 }
 
 .nav__list {
   display: flex;
-  list-style: none;
   padding: 0;
+  margin: 0;
 }
 
 .nav__item {
-  margin-right: 20px;
-  align-items: center;
-  text-transform: uppercase;
-  font-size: 12px;
+  list-style: none;
+  margin: 0 10px;
+}
+
+.nav__item:first-child {
+  margin-left: 0;
+  padding-left: 0;
 }
 
 .nav__item:last-child {
@@ -43,12 +48,11 @@ body {
 }
 
 .nav__link {
-  color: #000;
+  color: black;
   text-decoration: none;
   font-size: 12px;
+  text-transform: uppercase;
   position: relative;
-  margin-right: 20px;
-  height: 60px;
 }
 
 .nav__link:hover {
@@ -66,7 +70,6 @@ body {
   height: 4px;
   background-color: var(--link-blue);
   left: 0;
-  right: 0;
-  bottom: 0;
+  bottom: -18.5px;
   border-radius: 8px;
 }
